Fixed id of wifi table

--- a/octoprint_netconnectd/templates/netconnectd_settings_dialog.jinja2
+++ b/octoprint_netconnectd/templates/netconnectd_settings_dialog.jinja2
@@ -8,7 +8,7 @@
             {{ _('Sort by') }}: <a href="#" data-bind="click: function() { listHelper.changeSorting('ssid'); }">{{ _('SSID') }} ({{ _('ascending') }})</a> | <a href="#" data-bind="click: function() { listHelper.changeSorting('quality'); }">{{ _('Quality') }} ({{ _('descending') }})</a>
         </small>
     </div>
-    <table class="table table-striped table-hover table-condensed table-hover" id="log_files">
+    <table class="table table-striped table-hover table-condensed table-hover" id="settings_plugin_netconnectd_wifis">
         <thead>
         <tr>
             <th class="settings_plugin_netconnectd_wifis_ssid">{{ _('SSID') }}</th>
