Only try to fetch the wifi list if the wifi interface is actually present

--- a/octoprint_netconnectd/templates/netconnectd_settings.jinja2
+++ b/octoprint_netconnectd/templates/netconnectd_settings.jinja2
@@ -44,7 +44,7 @@
         </ul>
     </div>
 
-    <button class="btn btn-primary btn-block" data-bind="click: function() { $root.refresh() }, enable: $root.daemonOnline()">{{ _('Refresh') }}</button>
+    <button class="btn btn-primary btn-block" data-bind="click: function() { $root.refresh() }, enable: $root.daemonOnline() && $root.status.wifi.present()">{{ _('Refresh') }}</button>
 
     <div>
         <small class="muted">{{ _('netconnectd socket') }}: <span data-bind="text: settings.plugins.netconnectd.socket"></span></small>
